--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@types/react": "18.2.21",
 		"@types/react-dom": "18.2.7",
 		"clsx": "^2.0.0",
+		"cors": "^2.8.5",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.2.1",
 		"firebase": "^10.12.2",
@@ -31,6 +32,7 @@
 		"react-countdown": "^2.3.5",
 		"react-countdown-circle-timer": "^3.2.1",
 		"react-dom": "18.2.0",
+		"react-hot-toast": "^2.4.1",
 		"react-spring": "^9.7.3",
 		"react-toastify": "^10.0.5",
 		"sass": "^1.75.0",
