--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"react-countdown-circle-timer": "^3.2.1",
 		"react-dom": "18.2.0",
 		"react-hot-toast": "^2.4.1",
+		"react-icons": "^5.2.1",
 		"react-spring": "^9.7.3",
 		"react-toastify": "^10.0.5",
 		"sass": "^1.75.0",
