--- a/package.json
+++ b/package.json
@@ -22,13 +22,19 @@
 		"@types/react-dom": "18.2.7",
 		"clsx": "^2.0.0",
 		"cors": "^2.8.5",
+		"emailjs": "^4.0.3",
+		"emailjs-com": "^3.2.0",
 		"eslint": "8.48.0",
 		"eslint-config-next": "14.2.1",
+		"express": "^4.19.2",
 		"firebase": "^10.12.2",
+		"firebase-admin": "^12.1.1",
+		"firebase-functions": "^5.0.1",
 		"framer-motion": "^11.1.1",
 		"intl-messageformat": "^10.5.0",
 		"next": "^14.2.1",
 		"next-themes": "^0.2.1",
+		"nodemailer": "^6.9.13",
 		"particles.js": "^2.0.0",
 		"react": "18.2.0",
 		"react-countdown": "^2.3.5",
